<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Display">
        <Preference
            android:icon="@drawable/ic_language"
            android:key="language"
            android:summary=""
            android:title="@string/language"></Preference>
        <Preference
            android:icon="@drawable/ic_currency"
            android:key="currency"
            android:summary=""
            android:title="@string/currency"></Preference>
        <Preference
            android:icon="@drawable/ic_theme"
            android:key="theme"
            android:summary=""
            android:title="@string/theme"></Preference>
    </PreferenceCategory>
</PreferenceScreen>